# rephiedit-auto-chart-assistant

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build_all_windows.bat  build_release.bat  pyproject.toml  release_check.ps1  run_windows.bat
assets/windows/: FFMPEG_LICENSE.txt
config/: default_config.json
docs/: ALGORITHM.md  DEVELOPMENT_LOG.md  FORMAT_ANALYSIS.md  RELEASE_CHECKLIST.md  TESTING.md  V2_SUMMARY.md  V3_PLAN.md
installer/: inno_setup.iss
packaging/windows/: RePhiEditAutoChartAssistant.spec  gui_entry.py  version_info.txt
rephi_auto_chart/: __init__.py  accent.py  analysis.py  batch.py  chart_analyzer.py  cli.py  compare.py  config.py  diagnostics.py  exporter.py  generator.py  gui.py  layout.py  parser.py  pattern_generator.py  patterns.py  phrases.py  quality.py  runtime.py  timebase.py  timing.py  validator.py
scripts/: build_release.ps1  build_windows_exe.ps1  build_windows_installer.ps1  install.bat  install.sh  run_cli.bat  run_cli.sh  run_gui.bat  run_gui.sh  run_tests.bat  run_tests.sh
tests/: test_core.py
